Fix tag wrapping

--- a/assets/styles/project-card.scss
+++ b/assets/styles/project-card.scss
@@ -47,6 +47,7 @@
                 border-radius: 0.25rem;
                 font-size: 0.75rem;
                 line-height: 1.75rem;
+                white-space: nowrap;
             }
         }
         .links {
